fix header-text getting out of screen on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ em {font-style: italic;}
 strong {font-weight: bold;}
 .colorline{width:100%;height:5px;background-color:#007fc5;}
 hr.dividerline {float: left;background: #fff;margin:10px 20px 20px 20px;height: 0px;border:none;border-top: dotted 1px #ccc;width: 940px;}
-.heading-text, .heading-text-price{height:60px;margin-top:50px;}
+.heading-text, .heading-text-price{height:60px;margin-top:50px !important;}
 ul.list-square li{list-style-type:square;margin:5px 0px 10px 17px;}
 
 
